# initforge

./: .gitignore  LICENSE  README.md  config.json.template  pyproject.toml
initforge/: __init__.py  discord_credentials.py  flask_app_configuration.py  jira_credentials.py  mongo_client.py  open_ai.py  twitter_client.py  utils.py
tests/: test_discord_credentials.py  test_jira_credentials.py  test_utils.py
