[project]
name = "initforge"
version = "0.1.0"
description = "Generic modular project initialization for Flask, MongoDB, Twitter and OpenAI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tweepy",
    "mongoengine",
    "openai",
    "flask",
]

[project.optional-dependencies]
dev = ["pytest"]


[tool.setuptools.packages.find]
where = ["."]
include = ["initforge*"]

